<resources>

    <string name="app_name">AppHere</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Here</string>
    <string name="members">Members</string>
    <string name="broadcast">Broadcast</string>
    <string name="call_the_roll">Call The Roll</string>
    <string name="other">About</string>
    <string name="delete_all">DeleteAll</string>
    <string name="delete_selected">DelSelected</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="add_one_by_hand">AddOneByHand</string>
    <string name="find_contacts_from_sms">FromSMS</string>
    <string name="add_members_from_phonebook">FromPhonebook</string>
    <string name="place_holder">PlaceHolder</string>
    
    <string name="title_activity_collectContactsFromSMS">Pick Members From SMS</string>
    <string name="hint">Ask your members send you SMS which contains their names alone, ex: \"Mike\", and start searching</string>
    <string name="range">range msg place holder</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    
    <string name="title_activity_filter_candidates">Filter Candidates</string>
    <string name="candidates_hint">Candidates:</string>
    <string name="save_into_phonebook">SaveIntoPhoneBookByTheWay</string>
    <string name="choose_all">ChooseAll</string>
    <string name="choose_marked_only">MarkedOnly</string>
    
    <string name="title_activity_pick_members_from_phonebook">Contacts</string>
    
    <string name="message">Message</string>
    
    <string name="call_the_roll_usage">Press \"Start\", then ask members send you SMS: \"here\"</string>
    <string name="status"> x Arrived, n Left</string>
    <string name="hurry_up">message to abcent</string>
    <string name="stop">Stop</string>
    
    <string name="author">mayqlzu@gmail.com</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="exit">Exit</string>
    
    <string name="call">Call</string>
    
    
    <string name="todays">Today\'s SMS</string>
    <string name="today_and_yesterdays">Today and yesterday\'s SMS</string>
    <string name="allSMS">All SMS</string>
    
    <string name="no_contacts_found">No contacts found</string>
    <string name="sent">Sent</string>
    <string name="thanks_for_your_reply">Thanks for your reply</string>
    <string name="ok">OK</string>
    
    <string name="arrived">Arrived</string>
    <string name="left">Left</string>
</resources>