<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/candidates_hint" 
        android:layout_weight="1"
        />
    <ListView
        android:id="@+id/candidates_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />
    
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/save_into_phonebook" />
	
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:layout_weight="1" >
		    <Button
	        android:id="@+id/btn_choose_all"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_all" />
	
	    <Button
	        android:id="@+id/btn_choose_marked_only"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_marked_only" />
	
	    <Button
	        android:id="@+id/cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel" />
	</LinearLayout>
	
</LinearLayout>