<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	    <!-- add attributes: focusable and focusableInTouchMode to rob focus from
	    the first EditText, and the annoying keyboard won't show when launched -->
   		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:gravity="center"
        	android:focusable="true"
        	android:focusableInTouchMode="true"/>
   		
   		<Button
		    android:id="@+id/btn_deleteAll"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/delete_all" />
   		<Button
		    android:id="@+id/btn_delSelected"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/delete_selected" />
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="8"
	    android:orientation="vertical" >
		<ListView
		    android:id="@+id/members_listview"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
	</LinearLayout>
	
	
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:orientation="horizontal" >
   		<EditText 
   		    android:id="@+id/text_name"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:hint="@string/name" />
   		<EditText 
   		    android:id="@+id/text_number"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:hint="@string/number" 
		    android:inputType="phone" />
   		<Button
   		    android:id="@+id/btn_addOneByHand"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/add_one_by_hand" />
	</LinearLayout>
	
	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1" >
   		<Button
   		    android:id="@+id/btn_fromSMS"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/find_contacts_from_sms" />
   		<Button
   		    android:id="@+id/btn_fromPhonebook"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
        	android:text="@string/add_members_from_phonebook" />
	</RelativeLayout>
	
</LinearLayout>