<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status" 
        />
    
    <ListView
        android:id="@+id/members_left_list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        />
	
	<RelativeLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   > 
	   
	    <EditText 
	  		android:id="@+id/broadcast_text"
		    android:layout_width="200dip"
		    android:layout_height="wrap_content"
		    android:inputType="textMultiLine"
		    android:maxWidth="200dip"
		    android:maxHeight="100dip"
		    android:hint="@string/message"
	    />
    
	   	<Button
	  		android:id="@+id/btn_broadcast"
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:text="@string/hurry_up"
	       	android:layout_toRightOf="@id/broadcast_text"
	       	android:layout_marginLeft="20dip"
	       	/>
   	</RelativeLayout>
   	
	<Button
        android:id="@+id/btn_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start" 
        android:layout_gravity="center"
        />
</LinearLayout>