<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint" 
        android:layout_margin="10dip"/>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dip"	    android:orientation="horizontal"
	    android:layout_weight="1" >
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:orientation="vertical" >		    <TextView
		        android:id="@+id/range"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/range"
		        android:layout_margin="10dip"
		        android:layout_gravity="center"/>
		
		    <SeekBar
		        android:id="@+id/seekBar"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:max="2"
		        android:progress="2"
		        android:layout_margin="10dip"/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_gravity="center">	    <Button
	        android:id="@+id/btn_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel" />
	
	    <Button
	        android:id="@+id/btn_start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/start" />
	    </LinearLayout>
	    
	</LinearLayout>