<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/candidates_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />
	
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:layout_weight="1" >
	
	    <Button
	        android:id="@+id/btn_choose_all"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_all" />
	
	    <Button
	        android:id="@+id/btn_choose_marked_only"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_marked_only" />
	
	    <Button
	        android:id="@+id/btn_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel" />
	</LinearLayout>
	
</LinearLayout>