<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/author" />

    <LinearLayout
    	android:layout_width="200dip"
    	android:layout_height="wrap_content"
        android:layout_gravity="center"
    	android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btn_like"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_margin="10dip"
	        android:text="@string/like" />
	
	    <Button
	        android:id="@+id/btn_dislike"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_margin="10dip"
	        android:text="@string/dislike" />
	</LinearLayout>

</LinearLayout>